// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationCard isolate action matches snapshot 1`] = `
<div>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-grow-m-m-plain-hasBorder"
    data-test-subj="endpoint-response-action-confirmation"
  >
    <div
      class="euiText emotion-euiText-s"
    >
      <h4>
        Confirm 
        Isolation
      </h4>
    </div>
    <div
      class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
    />
    <dl
      class="euiDescriptionList emotion-euiDescriptionList-column-left-s-s"
      data-type="column"
      style="grid-template-columns: 1fr 2fr;"
    >
      <dt
        class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
      >
        Host name
      </dt>
      <dd
        class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
      >
        WIN-PROD-042
      </dd>
      <dt
        class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
      >
        Agent ID
      </dt>
      <dd
        class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
      >
        agent-abc-123
      </dd>
      <dt
        class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
      >
        Action
      </dt>
      <dd
        class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
      >
        Isolate host
      </dd>
    </dl>
    <div
      class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
    />
    <div
      class="euiPanel euiPanel--warning euiPanel--paddingSmall euiCallOut euiCallOut--warning emotion-euiPanel-none-s-warning-euiCallOut"
    >
      <p
        class="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-warning"
      >
        <span
          aria-hidden="true"
          class="emotion-euiCallOut__icon"
          color="inherit"
          data-euiicon-type="warning"
        />
        Isolating will sever all network connectivity for this host.
      </p>
    </div>
    <div
      class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
    />
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexEnd-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-primary"
          data-test-subj="endpoint-response-action-cancel"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text css-1ryezsz-s"
            >
              Cancel
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-s-defaultMinWidth-fill-warning"
          data-test-subj="endpoint-response-action-confirm"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            Confirm 
            Isolation
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfirmationCard unisolate action matches snapshot 1`] = `
<div>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingMedium emotion-euiPanel-grow-m-m-plain-hasBorder"
    data-test-subj="endpoint-response-action-confirmation"
  >
    <div
      class="euiText emotion-euiText-s"
    >
      <h4>
        Confirm 
        Un-isolation
      </h4>
    </div>
    <div
      class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
    />
    <dl
      class="euiDescriptionList emotion-euiDescriptionList-column-left-s-s"
      data-type="column"
      style="grid-template-columns: 1fr 2fr;"
    >
      <dt
        class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
      >
        Host name
      </dt>
      <dd
        class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
      >
        WIN-PROD-042
      </dd>
      <dt
        class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
      >
        Agent ID
      </dt>
      <dd
        class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
      >
        agent-abc-123
      </dd>
      <dt
        class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
      >
        Action
      </dt>
      <dd
        class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
      >
        Un-isolate host
      </dd>
    </dl>
    <div
      class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
    />
    <div
      class="euiPanel euiPanel--primary euiPanel--paddingSmall euiCallOut euiCallOut--primary emotion-euiPanel-none-s-primary-euiCallOut"
    >
      <p
        class="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-primary"
      >
        <span
          aria-hidden="true"
          class="emotion-euiCallOut__icon"
          color="inherit"
          data-euiicon-type="check"
        />
        Un-isolating will restore full network connectivity for this host.
      </p>
    </div>
    <div
      class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
    />
    <div
      class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexEnd-stretch-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-primary"
          data-test-subj="endpoint-response-action-cancel"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text css-1ryezsz-s"
            >
              Cancel
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <button
          class="euiButton emotion-euiButtonDisplay-s-defaultMinWidth-fill-primary"
          data-test-subj="endpoint-response-action-confirm"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent"
          >
            Confirm 
            Un-isolation
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
